--- a/src/MedVisit.AuthServer/MedVisit.AuthServer.csproj
+++ b/src/MedVisit.AuthServer/MedVisit.AuthServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="13.0.1" />
-    <PackageReference Include="MediatR" Version="12.4.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MedVisit.Common.AuthDbContext\MedVisit.Common.AuthDbContext.csproj" />
+
     <ProjectReference Include="..\MedVisit.Core\MedVisit.Core.csproj" />
   </ItemGroup>
 
