--- a/src/MedVisit.AuthServer/Properties/launchSettings.json
+++ b/src/MedVisit.AuthServer/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51432",
-      "sslPort": 44301
+      "applicationUrl": "http://localhost:2312",
+      "sslPort": 44345
     }
   },
   "profiles": {
@@ -14,11 +14,9 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5271",
+      "applicationUrl": "http://localhost:5144",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DB_USERNAME": "auth",
-        "DB_PASSWORD": "auth"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "https": {
@@ -26,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7064;http://localhost:5271",
+      "applicationUrl": "https://localhost:7164;http://localhost:5144",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DB_USERNAME": "auth",
