--- a/infra/nginx-ingress/ingress.yaml
+++ b/infra/nginx-ingress/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: accessmanagement-service
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/auth-url: http://arch.homework/auth
+    nginx.ingress.kubernetes.io/auth-response-headers: x-user_id
 spec:
   ingressClassName: nginx 
   rules:
@@ -54,3 +56,11 @@ spec:
                 name: auth-service-medvisit-authserver
                 port:
                   number: 8080
+                  
+          - path: /auth
+            pathType: Prefix
+            backend:
+              service:
+                name: auth-service-medvisit-authserver
+                port:
+                  number: 8080        
