--- a/src/MedVisit.AuthServer/Properties/launchSettings.json
+++ b/src/MedVisit.AuthServer/Properties/launchSettings.json
@@ -16,7 +16,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5144",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_USERNAME": "auth",
+        "DB_PASSWORD": "auth"
       }
     },
     "https": {
