--- a/infra/accessmanagement-service/templates/configmap.yaml
+++ b/infra/accessmanagement-service/templates/configmap.yaml
@@ -9,3 +9,4 @@ data:
   PostgresConnection__Port: "5432"
   PostgresConnection__Database: {{ .Values.postgresql.postgresqlDatabase }}
   JwtSettings__Key: {{ .Values.jwtSettings.key }}
+  Endpoints__AuthService: {{ .Values.endpoints.authService}}
