--- a/infra/booking-service/templates/configmap.yaml
+++ b/infra/booking-service/templates/configmap.yaml
@@ -10,4 +10,5 @@ data:
   PostgresConnection__Database: {{ .Values.postgresql.postgresqlDatabase }}
   JwtSettings__Key: {{ .Values.jwtSettings.key }}
   Endpoints__PaymentService: {{ .Values.endpoints.paymentService}}
+  Endpoints__AuthService: {{ .Values.endpoints.authService}}
   RabbitMq__Host: {{ .Values.rabbitmq.host }}
