--- a/src/MedVisit.BookingService/MedVisit.BookingService.csproj
+++ b/src/MedVisit.BookingService/MedVisit.BookingService.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MedVisit.Core\MedVisit.Core.csproj" />
+  </ItemGroup>
+
 </Project>
