--- a/src/MedVisit.AuthServer/appsettings.json
+++ b/src/MedVisit.AuthServer/appsettings.json
@@ -2,7 +2,7 @@
 
   "JwtSettings": {
     "Issuer": "AuthService",
-    "Audience": "AccessManagementService",
+    "Audience": "MedVisitService",
     "ExpiresInMinutes": 60
   },
 
