--- a/infra/auth-service/values.yaml
+++ b/infra/auth-service/values.yaml
@@ -135,7 +135,7 @@ postgresql:
 
 jwtSettings:
   issuer: AuthService
-  audience: AccessManagementService
+  audience: MedVisitService
   key: F1B7D3B8A6F23E8B3B5DB6880A31C5D2D30E0D0A3D6F1A846D5C2F2B1D92C9A6
 
 
