--- a/src/MedVisit.BookingService/appsettings.Development.json
+++ b/src/MedVisit.BookingService/appsettings.Development.json
@@ -13,6 +13,9 @@
   "RabbitMq": {
     "Host": "localhost"
   },
+  "Redis": {
+    "Host": "localhost:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
