--- a/infra/booking-service/values.yaml
+++ b/infra/booking-service/values.yaml
@@ -11,7 +11,7 @@ image:
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: hw8
+  tag: hw9
 
 # This is for the secretes for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -142,4 +142,7 @@ endpoints:
   scheduleService: "http://schedule-service.schedule-service.svc.cluster.local:8080/schedule/"
 
 rabbitmq:
-  host: rabbitmq.default.svc.cluster.local  
+  host: rabbitmq.default.svc.cluster.local   
+
+redis:
+  host: redis-master.default.svc.cluster.local:6379 
